# sp-sub-auth

./: .env_example  README.md  pyproject.toml
src/: config.py  main.py
src/lib/: auth_discord.py
src/models/: user.py
src/routers/: router_discord.py
src/static/: sonolus_public_key.pub
