[tool.poetry]
name = "sp-sub-auth"
version = "0.1.0"
description = "sonolus and discord authorization server for sp-api-v3"
authors = ["Dosugamea <17107514+Dosugamea@users.noreply.github.com>"]
license = "AGPLv3"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"
gunicorn = "^20.1.0"
python-multipart = "^0.0.5"
dataclasses-json = "^0.5.7"
sqlmodel = "^0.0.8"
python-dotenv = "^0.21.0"
pycryptodome = "^3.16.0"
python-i18n = {extras = ["yaml"], version = "^0.3.9"}
httpx = "^0.23.3"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^22.12.0"
mypy = "^0.991"
isort = "^5.11.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
